Player now faces the direction they move

--- a/3505_Final_Project/Makefile.Debug
+++ b/3505_Final_Project/Makefile.Debug
@@ -14,10 +14,10 @@ CXX           = g++
 DEFINES       = -DUNICODE -D_UNICODE -DQT_DEPRECATED_WARNINGS -DQT_QML_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_NEEDS_QMAIN
 CFLAGS        = -fno-keep-inline-dllexport -g -Wextra -Wall -W $(DEFINES)
 CXXFLAGS      = -fno-keep-inline-dllexport -g -std=gnu++11 -Wextra -Wall -W -fexceptions -mthreads $(DEFINES)
-INCPATH       = -I. -IC:\Qt\5.9.2\mingw53_32\include -IC:\Qt\5.9.2\mingw53_32\include\QtWidgets -IC:\Qt\5.9.2\mingw53_32\include\QtGui -IC:\Qt\5.9.2\mingw53_32\include\QtANGLE -IC:\Qt\5.9.2\mingw53_32\include\QtCore -Idebug -I. -IC:\Qt\5.9.2\mingw53_32\mkspecs\win32-g++ 
+INCPATH       = -I. -IC:/Users/monaw/Desktop/cs3505-f17-a8-edu-app-SkylerHektner/3505_Final_Project/../../Box2D-master/Box2D -IC:/Users/monaw/Desktop/cs3505-f17-a8-edu-app-SkylerHektner/3505_Final_Project/../../SFML-2.4.2/include -IC:\Qt\5.9.2\mingw53_32\include -IC:\Qt\5.9.2\mingw53_32\include\QtWidgets -IC:\Qt\5.9.2\mingw53_32\include\QtGui -IC:\Qt\5.9.2\mingw53_32\include\QtANGLE -IC:\Qt\5.9.2\mingw53_32\include\QtCore -Idebug -I. -IC:\Qt\5.9.2\mingw53_32\mkspecs\win32-g++ 
 LINKER      =        g++
 LFLAGS        =        -Wl,-subsystem,windows -mthreads
-LIBS        =        -lmingw32 -LC:\Qt\5.9.2\mingw53_32\lib C:\Qt\5.9.2\mingw53_32\lib\libqtmaind.a -LC:\utils\my_sql\my_sql\lib -LC:\utils\postgresql\pgsql\lib -lshell32 C:\Qt\5.9.2\mingw53_32\lib\libQt5Widgetsd.a C:\Qt\5.9.2\mingw53_32\lib\libQt5Guid.a C:\Qt\5.9.2\mingw53_32\lib\libQt5Cored.a 
+LIBS        =        -lmingw32 -LC:\Qt\5.9.2\mingw53_32\lib C:\Qt\5.9.2\mingw53_32\lib\libqtmaind.a -LC:\utils\my_sql\my_sql\lib -LC:\utils\postgresql\pgsql\lib -lshell32 -LC:\Users\monaw\Desktop\SFML-2.4.2\lib -lsfml-main-d -lsfml-audio-d -lsfml-window-d -lsfml-graphics-d -lsfml-system-d -lsfml-network-d C:\Qt\5.9.2\mingw53_32\lib\libQt5Widgetsd.a C:\Qt\5.9.2\mingw53_32\lib\libQt5Guid.a C:\Qt\5.9.2\mingw53_32\lib\libQt5Cored.a 
 QMAKE         = C:\Qt\5.9.2\mingw53_32\bin\qmake.exe
 IDC           = idc
 IDL           = midl
@@ -217,7 +217,7 @@ debug/moc_mainwindow.cpp: C:/Qt/5.9.2/mingw53_32/include/QtWidgets/QMainWindow \
 		mainwindow.h \
 		debug/moc_predefs.h \
 		C:/Qt/5.9.2/mingw53_32/bin/moc.exe
-	C:\Qt\5.9.2\mingw53_32\bin\moc.exe $(DEFINES) --include debug/moc_predefs.h -IC:/Qt/5.9.2/mingw53_32/mkspecs/win32-g++ -I"C:/Users/monaw/Desktop/3505 Final Project/3505-Final-Project/3505_Final_Project" -IC:/Qt/5.9.2/mingw53_32/include -IC:/Qt/5.9.2/mingw53_32/include/QtWidgets -IC:/Qt/5.9.2/mingw53_32/include/QtGui -IC:/Qt/5.9.2/mingw53_32/include/QtANGLE -IC:/Qt/5.9.2/mingw53_32/include/QtCore -IC:/Qt/Tools/mingw530_32/lib/gcc/i686-w64-mingw32/5.3.0/include -IC:/Qt/Tools/mingw530_32/lib/gcc/i686-w64-mingw32/5.3.0/include-fixed -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++ -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++/i686-w64-mingw32 -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++/backward mainwindow.h -o debug\moc_mainwindow.cpp
+	C:\Qt\5.9.2\mingw53_32\bin\moc.exe $(DEFINES) --include debug/moc_predefs.h -IC:/Qt/5.9.2/mingw53_32/mkspecs/win32-g++ -IC:/Users/monaw/Desktop/cs3505-f17-a8-edu-app-SkylerHektner/3505_Final_Project -IC:/Users/monaw/Desktop/Box2D-master/Box2D -IC:/Users/monaw/Desktop/SFML-2.4.2/include -IC:/Qt/5.9.2/mingw53_32/include -IC:/Qt/5.9.2/mingw53_32/include/QtWidgets -IC:/Qt/5.9.2/mingw53_32/include/QtGui -IC:/Qt/5.9.2/mingw53_32/include/QtANGLE -IC:/Qt/5.9.2/mingw53_32/include/QtCore -IC:/Qt/Tools/mingw530_32/lib/gcc/i686-w64-mingw32/5.3.0/include -IC:/Qt/Tools/mingw530_32/lib/gcc/i686-w64-mingw32/5.3.0/include-fixed -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++ -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++/i686-w64-mingw32 -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++/backward mainwindow.h -o debug\moc_mainwindow.cpp
 
 debug/moc_gamecontroller.cpp: C:/Qt/5.9.2/mingw53_32/include/QtCore/QObject \
 		C:/Qt/5.9.2/mingw53_32/include/QtCore/qobject.h \
@@ -269,7 +269,7 @@ debug/moc_gamecontroller.cpp: C:/Qt/5.9.2/mingw53_32/include/QtCore/QObject \
 		gamecontroller.h \
 		debug/moc_predefs.h \
 		C:/Qt/5.9.2/mingw53_32/bin/moc.exe
-	C:\Qt\5.9.2\mingw53_32\bin\moc.exe $(DEFINES) --include debug/moc_predefs.h -IC:/Qt/5.9.2/mingw53_32/mkspecs/win32-g++ -I"C:/Users/monaw/Desktop/3505 Final Project/3505-Final-Project/3505_Final_Project" -IC:/Qt/5.9.2/mingw53_32/include -IC:/Qt/5.9.2/mingw53_32/include/QtWidgets -IC:/Qt/5.9.2/mingw53_32/include/QtGui -IC:/Qt/5.9.2/mingw53_32/include/QtANGLE -IC:/Qt/5.9.2/mingw53_32/include/QtCore -IC:/Qt/Tools/mingw530_32/lib/gcc/i686-w64-mingw32/5.3.0/include -IC:/Qt/Tools/mingw530_32/lib/gcc/i686-w64-mingw32/5.3.0/include-fixed -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++ -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++/i686-w64-mingw32 -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++/backward gamecontroller.h -o debug\moc_gamecontroller.cpp
+	C:\Qt\5.9.2\mingw53_32\bin\moc.exe $(DEFINES) --include debug/moc_predefs.h -IC:/Qt/5.9.2/mingw53_32/mkspecs/win32-g++ -IC:/Users/monaw/Desktop/cs3505-f17-a8-edu-app-SkylerHektner/3505_Final_Project -IC:/Users/monaw/Desktop/Box2D-master/Box2D -IC:/Users/monaw/Desktop/SFML-2.4.2/include -IC:/Qt/5.9.2/mingw53_32/include -IC:/Qt/5.9.2/mingw53_32/include/QtWidgets -IC:/Qt/5.9.2/mingw53_32/include/QtGui -IC:/Qt/5.9.2/mingw53_32/include/QtANGLE -IC:/Qt/5.9.2/mingw53_32/include/QtCore -IC:/Qt/Tools/mingw530_32/lib/gcc/i686-w64-mingw32/5.3.0/include -IC:/Qt/Tools/mingw530_32/lib/gcc/i686-w64-mingw32/5.3.0/include-fixed -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++ -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++/i686-w64-mingw32 -IC:/Qt/Tools/mingw530_32/i686-w64-mingw32/include/c++/backward gamecontroller.h -o debug\moc_gamecontroller.cpp
 
 compiler_moc_source_make_all:
 compiler_moc_source_clean:
@@ -514,6 +514,44 @@ debug/mainwindow.o: mainwindow.cpp mainwindow.h \
 		gamecontroller.h \
 		C:/Qt/5.9.2/mingw53_32/include/QtCore/QObject \
 		ui_mainwindow.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtCore/QVariant \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/QAction \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qaction.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qactiongroup.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/QApplication \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qapplication.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtCore/qcoreapplication.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtCore/qeventloop.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qdesktopwidget.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtGui/qguiapplication.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtGui/qinputmethod.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/QButtonGroup \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qbuttongroup.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/QHeaderView \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qheaderview.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qabstractitemview.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qabstractscrollarea.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qframe.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtCore/qabstractitemmodel.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtCore/qitemselectionmodel.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qabstractitemdelegate.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qstyleoption.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qabstractspinbox.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtGui/qvalidator.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtCore/qregularexpression.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qslider.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qabstractslider.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qstyle.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qtabbar.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qrubberband.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/QLabel \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qlabel.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/QMenuBar \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qmenubar.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qmenu.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/QStatusBar \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/qstatusbar.h \
+		C:/Qt/5.9.2/mingw53_32/include/QtWidgets/QWidget \
 		C:/Qt/5.9.2/mingw53_32/include/QtGui/QKeyEvent
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\mainwindow.o mainwindow.cpp
 
